--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-YXLZ0S9VVQ"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-THTJYXG7G3"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-YXLZ0S9VVQ');
+    gtag('config', 'G-THTJYXG7G3');
   </script>
 
   <meta charset="UTF-8">
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
