--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
       <div class="cafe-logo">
         <img src="/logo/Honey Cafe Logo.svg" alt="Honey Cafe logo">
       </div>
-      <span>Café Honey</span>
+      <span>Honey Café</span>
       <a href="/honey" target="_blank">View Menu</a>
     </div>
 
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
