--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Café Menu Gallery</title>
+  <title>Café QR Menu</title>
 
   <!-- favicon from /logo -->
   <link rel="icon" type="image/svg+xml" href="/logo/favicon.svg">
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
