--- a/HoneyCafe/index.html
+++ b/HoneyCafe/index.html
@@ -3,27 +3,27 @@
 <head>
   
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-JPVX0LJJMK"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T6NRY72P42"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-JPVX0LJJMK');
+  gtag('config', 'G-T6NRY72P42');
 </script>
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>CAFÉ Honey</title>
+  <title>HONEY CAFÉ</title>
  
   <!-- Redirect JS -->
   <script>
-    location.replace("https://www.figma.com/proto/BkBXwIgTozOQbmnDxIEnIJ/Honey-CAFE?page-id=0%3A1&node-id=208-12144&viewport=1539%2C118%2C0.26&t=MpZHhVPGAr2jXsmi-1&scaling=min-zoom&content-scaling=fixed&hotspot-hints=0&hide-ui=1&starting-point-node-id=208%3A12144");
+    location.replace("https://www.figma.com/proto/K0HllTSYEbCcCdWVeNveHy/Honey-CAFE?node-id=208-12144&p=f&viewport=3529%2C135%2C0.32&t=sDoeP8uNUfUX3ULG-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=208%3A12144&page-id=0%3A1&hotspot-hints=0&hide-ui=1");
   </script>
 
   <!-- Fallback Without JS -->
   <noscript>
-    <meta http-equiv="refresh" content="0;url=https://www.figma.com/proto/BkBXwIgTozOQbmnDxIEnIJ/Honey-CAFE?page-id=0%3A1&node-id=208-12144&viewport=1539%2C118%2C0.26&t=MpZHhVPGAr2jXsmi-1&scaling=min-zoom&content-scaling=fixed&hotspot-hints=0&hide-ui=1&starting-point-node-id=208%3A12144">
+    <meta http-equiv="refresh" content="0;url=https://www.figma.com/proto/K0HllTSYEbCcCdWVeNveHy/Honey-CAFE?node-id=208-12144&p=f&viewport=3529%2C135%2C0.32&t=sDoeP8uNUfUX3ULG-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=208%3A12144&page-id=0%3A1&hotspot-hints=0&hide-ui=1">
   </noscript>
 
   <style>
@@ -49,7 +49,7 @@
 
 <body>
   <p>If you are not redirected automatically, <br>
-     <a href="https://www.figma.com/proto/BkBXwIgTozOQbmnDxIEnIJ/Honey-CAFE?page-id=0%3A1&node-id=208-12144&viewport=1539%2C118%2C0.26&t=MpZHhVPGAr2jXsmi-1&scaling=min-zoom&content-scaling=fixed&hotspot-hints=0&hide-ui=1&starting-point-node-id=208%3A12144">
+     <a href="https://www.figma.com/proto/K0HllTSYEbCcCdWVeNveHy/Honey-CAFE?node-id=208-12144&p=f&viewport=3529%2C135%2C0.32&t=sDoeP8uNUfUX3ULG-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=208%3A12144&page-id=0%3A1&hotspot-hints=0&hide-ui=1">
        Click Here To Open The Menu
      </a>.
   </p>
