--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <img src="/logo/Honey Cafe Logo.svg" alt="Honey Cafe logo">
       </div>
       <span>Honey Café</span>
-      <a href="/honey" target="_blank">View Menu</a>
+      <a href="/HoneyCafe" target="_blank">View Menu</a>
     </div>
 
     <div class="cafe-card">
@@ -207,6 +207,7 @@
 
 </body>
 </html>
+
 
 
 
